kubernetes/production_cloud_frontend/authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-authentication
  labels:
    project: meicm-bm
    name: bookmanager-authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-authentication
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-authentication
    spec:
      containers:
      - name: bookmanager-authentication
        ports:
        - containerPort: 10002
        image: gcr.io/meicm-cc/bookmanager_authentication_service:1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
