kubernetes/production_cloud_frontend/search-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-search
  labels:
    project: meicm-bm
    name: bookmanager-search
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-search
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-search
    spec:
      containers:
      - name: bookmanager-search
        ports:
        - containerPort: 10001
        image: gcr.io/meicm-cc/bookmanager_search_service:1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
