kubernetes/production_cloud_frontend/tracking-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-tracking
  labels:
    project: meicm-bm
    name: bookmanager-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-tracking
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-tracking
    spec:
      containers:
      - name: bookmanager-tracking
        ports:
        - containerPort: 10003
        image: gcr.io/meicm-cc/bookmanager_tracking_service:1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
