kubernetes/production_cloud_frontend/authentication-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  bookmanager-authentication
  labels:
    name: bookmanager-authentication
spec:
  selector:
    name: bookmanager-authentication
  type:  ClusterIP
  ports:
  - port:  10002
    targetPort:  10002
