kubernetes/production_cloud_frontend/gateway-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  bookmanager-gateway
  labels:
    name: bookmanager-gateway
spec:
  selector:
    name:  bookmanager-gateway
  type: NodePort
  ports:
  - port:  8081
    targetPort:  80
