kubernetes/production_cloud_frontend/ingress.yml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: meicm-ingress
spec:
  rules:
    - host: api.bookmanager.meicm
      http:
        paths:
          - path: /*
            backend:
              serviceName: bookmanager-gateway
              servicePort: 8081
